@@ -1,0 +1,45 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<Scenery>
+
+  <Metric kind = "ChernSimons">
+    <Spin> 0. </Spin>
+    <ModifCS> 0.5 </ModifCS>
+  </Metric>
+
+  <Screen>
+    <Position> 1000. 100. 0.78 0. </Position>
+    <Time unit="geometrical_time"> 1000. </Time>
+    <FieldOfView> 0.314159265358979323846264338327950288419716 </FieldOfView>
+    <Resolution> 128 </Resolution>
+    <Spectrometer kind="wave" nsamples="1"> 2.0e-6 2.4e-6 </Spectrometer>
+
+    By using a cleverly pre-computed mask, on can avoid computing
+    pixels that are known to be black. The path is normally either
+    absolute or relative to the XML file, but it is interpreted as
+    relative to the working directory if prefixed with "`pwd`/" :
+    <Mask>`pwd`/example-startrace.fits</Mask>
+
+  </Screen>
+
+  <Astrobj kind = "Star">
+    <Radius> 2. </Radius>
+    <Velocity> 0. 0. 0.037037 </Velocity>
+    <Position> 600. 9. 1.5707999999999999741 0 </Position>
+    <Spectrum kind="BlackBody">
+      <Temperature> 6000 </Temperature>
+    </Spectrum>
+    <Opacity kind="PowerLaw">
+      <Exponent> 0 </Exponent>
+      <Constant> 0.1 </Constant>
+    </Opacity>
+    <RMax> 50. </RMax>
+    <OpticallyThin/>
+  </Astrobj>
+
+  <Quantities>Spectrum</Quantities>
+
+  <NThreads> 2 </NThreads>
+
+  <MinimumTime> 0. </MinimumTime>
+
+</Scenery>
