@@ -1,3 +1,6 @@
+NEXT 2016/12/07 FEATURE
+   * New Metric in stdplug: ChernSimons.
+
 1.1.1 2016/10/30 BUG
    * When Gyoto is configured to be installed in another prefix than
      /usr/local/, look into two additional directories when loading
